--- a/final/final_top_summary.html
+++ b/final/final_top_summary.html
@@ -17,7 +17,7 @@
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Target Device:</B></TD>
-<TD>xc7z030-3fbg676</TD>
+<TD>xc7z020-3clg484</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Errors:</B></LI></UL></TD>
 <TD>&nbsp;</TD>
 </TR>
@@ -72,11 +72,11 @@
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/makenal/Documents/music-synth/final\isim.log'>ISIM Simulator Log</A></TD><TD>Current</TD><TD COLSPAN='2'>Fri Mar 8 18:43:29 2019</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/makenal/Documents/music-synth/final\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>Fri Mar 8 18:43:29 2019</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/makenal/Documents/music-synth/final\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Fri Mar 8 18:43:29 2019</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/ad9697/Documents/music-synth/final\isim.log'>ISIM Simulator Log</A></TD><TD>Current</TD><TD COLSPAN='2'>Fri Mar 8 16:44:27 2019</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/ad9697/Documents/music-synth/final\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>Fri Mar 8 16:44:27 2019</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/ad9697/Documents/music-synth/final\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Fri Mar 8 16:44:27 2019</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 03/08/2019 - 21:26:06</center>
+<br><center><b>Date Generated:</b> 03/08/2019 - 22:32:02</center>
 </BODY></HTML>
